k8s/carental/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: carental
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: carental.local
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 3000
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: client
            port:
              number: 3000
        path: /
        pathType: Prefix
